--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <a href="/events.html" class="nav-link">🎯 События</a>
         <a href="/scanner.html" class="nav-link">📱 Сканер</a>
         <a href="/stats.html" class="nav-link">📊 Статистика</a>
+        <a href="/admin.html" class="nav-link" id="admin-nav" style="display: none;">👑 Админ</a>
     </nav>
 
     <!-- Только список посетителей -->
