--- a/public/scanner.html
+++ b/public/scanner.html
@@ -15,7 +15,14 @@
             <a href="/" class="back-btn">← Назад</a>
         </div>
     </div>
-
+    <nav class="main-nav">
+        <a href="/" class="nav-link">📋 Посетители</a>
+        <a href="/visitors.html" class="nav-link">➕ Добавить</a>
+        <a href="/events.html" class="nav-link">🎯 События</a>
+        <a href="/scanner.html" class="nav-link active">📱 Сканер</a>
+        <a href="/stats.html" class="nav-link">📊 Статистика</a>
+        <a href="/admin.html" class="nav-link" id="admin-nav" style="display: none;">👑 Админ</a>
+    </nav>
     <div class="scanner-container">
         <video id="qr-video" class="hidden"></video>
         <div class="scanner-controls">
