--- a/public/events.html
+++ b/public/events.html
@@ -197,5 +197,6 @@
         utils.debounce(() => events.filter(), 500)
     );
 </script>
+<script src="/js/responsive-tables.js"></script>
 </body>
 </html>
