--- a/public/scan.html
+++ b/public/scan.html
@@ -481,5 +481,6 @@
         if (refreshTimer) clearInterval(refreshTimer);
     });
 </script>
+<script src="/js/responsive-tables.js"></script>
 </body>
 </html>
