--- a/public/index.html
+++ b/public/index.html
@@ -60,5 +60,6 @@
 <script src="/js/auth.js"></script>
 <script src="/js/visitors.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/responsive-tables.js"></script>
 </body>
 </html>
