--- a/public/login.html
+++ b/public/login.html
@@ -399,5 +399,6 @@
         showAlert('warning', 'Отсутствует подключение к интернету');
     });
 </script>
+<script src="/js/responsive-tables.js"></script>
 </body>
 </html>
